# dotfiles

./: .cargo  .config  .gitignore  README.md  install.py
.config/: whiskers-launcher  whiskers-launcher-bookmarks
backup-files/latte-dock/: P3.layout.latte
bash/: .bashrc
configs/bash/: .bashrc
configs/firefox/: README.md
configs/fish/: fish_variables
configs/nvim/: lazy-lock.json
configs/starship/: starship.toml
dots/: dots-db.json
dots/alacritty/: alacritty.toml  dank-theme.toml  monocode-lynx.toml  monocode-panther.toml
dots/bash/: .bashrc
dots/cargo/: config.toml
dots/discord/: settings.json
dots/dunst/: dunstrc
dots/fastfetch/: config.jsonc
dots/fish/: config.fish  fish_variables
dots/fontconfig/: fonts.conf
dots/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  hyprsunset.conf
dots/ideavim/: .ideavimrc
dots/kitty/: kitty.conf  lynx.conf  panther.conf
dots/konsole/: Custom Dark.profile  Custom Light.profile  Custom.profile  monocode-lynx.colorscheme  monocode-panther.colorscheme
dots/legion-5-color/: legion5-color-profile.icm
dots/local-binaries/: android-emulator.sh  autostart-apps.sh  commit  dotcat  gaming-mode  gaming-mode.sh  gitter  maintain  push  setwall  solaar.sh  solar.sh  steam.sh  subliminal  sys  toggle-waybar.sh  vicinae-server.sh  vicinae.sh  zed
dots/mordomo/: settings.json
dots/mordomo-emojis/: history.json
dots/nvim/: init.lua  (+1 more)
dots/scripts/sys/: Cargo.toml
dots/scripts/sys/src/: debug.rs  main.rs  mirrors.rs  packages.rs
other/: kde-shortcuts.kksrc  shortcuts.kksrc
(+220 files in other folders)
