[package]
name = "sys"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = {version = "0.12.0", features = ["fuzzy-select"]}
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
